--- a/.github/workflows/deploy_to_neocities.yml
+++ b/.github/workflows/deploy_to_neocities.yml
@@ -32,4 +32,4 @@ jobs:
       with:
         api_token: ${{ secrets.NEOCITIES_API_TOKEN }}
         cleanup: true
-        dist_dir: ./dist
+        dist_dir: dist
