--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
     "build": "next build"
   },
   "dependencies": {
+    "@arwes/react": "^1.0.0-alpha.23",
+    "@emotion/react": "^11.11.1",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.5.7",
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
