--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "scripts": {
-    "dev": "next dev",
-    "build": "next build"
+    "dev": "next dev"
   },
   "dependencies": {
-    "@arwes/react": "^1.0.0-alpha.23",
-    "@emotion/react": "^11.11.1",
-    "next": "^13.4.19",
+    "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.182"
   },
   "devDependencies": {
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "typescript": "5.2.2"
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
