--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-parallax-tilt": "^1.7.182"
+    "react-parallax-tilt": "^1.7.182",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
@@ -14,6 +15,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.33",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1"
   }
 }
